set(PROJECT_NAME libnoiseutils)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS YES CACHE BOOL "Export all symbols")
set(libSrcs ${libSrcs} noiseutils.cpp)
if(BUILD_SHARED)
	add_library(noiseutils SHARED ${libSrcs})
	target_link_libraries(noiseutils noise)
	set_target_properties(noiseutils PROPERTIES LIBNOISE_VERSION ${LIBNOISE_VERSION})
	target_include_directories(noiseutils PRIVATE ${PROJECT_SOURCE_DIR}/src)
	install(TARGETS noiseutils DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
else()
	add_library(noiseutils-static STATIC ${libSrcs})
	target_link_libraries(noiseutils-static noise-static)
	set_target_properties(noiseutils-static PROPERTIES LIBNOISE_VERSION ${LIBNOISE_VERSION})
	target_include_directories(noiseutils-static PRIVATE ${PROJECT_SOURCE_DIR}/src)
	install(TARGETS noiseutils-static DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
endif()
install(FILES "${PROJECT_SOURCE_DIR}/noiseutils/noiseutils.h" DESTINATION "${CMAKE_INSTALL_PREFIX}/include/noise")

